antrl4CS/Generated/construccion_semana2Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Definition/construccion_semana2Parser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class construccion_semana2Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		FUNC=1, ENTRY=2, DECLARE=3, SET=4, OBJECT=5, USE=6, CHECK=7, OTHERWISE=8, 
		LOOP=9, REPEAT=10, GIVES=11, AND=12, OR=13, NOT=14, NULL=15, TYPE_I=16, 
		TYPE_F=17, TYPE_B=18, TYPE_S=19, ASK=20, SHOW=21, LEN=22, CONVERT_OP=23, 
		FILE_OP=24, BOOL=25, FLOAT=26, INT=27, STRING=28, ID=29, COMMA=30, DOT=31, 
		COLON=32, SEMI_COLON=33, EQUAL=34, QUESTION=35, UNDERSCORE=36, O_PAREN=37, 
		C_PAREN=38, O_BRACKETS=39, C_BRACKETS=40, O_BRACES=41, C_BRACES=42, PLUS=43, 
		MINUS=44, MULTIPLY=45, DIVIDE=46, MODULO=47, LTHAN=48, GTHAN=49, LTE=50, 
		GTE=51, EQ=52, NEQ=53, WS=54;
	public const int
		RULE_program = 0, RULE_otraclase = 1, RULE_clase_decl = 2, RULE_classBody = 3, 
		RULE_classMember = 4, RULE_func_decl = 5, RULE_entry_func_decl = 6, RULE_param_list = 7, 
		RULE_param = 8, RULE_block = 9, RULE_sentencia = 10, RULE_declare_stmt = 11, 
		RULE_set_stmt = 12, RULE_setObjetivo = 13, RULE_return_stmt = 14, RULE_stmt_control = 15, 
		RULE_check_stmt = 16, RULE_otherwiseOpcional = 17, RULE_loop_stmt = 18, 
		RULE_loopInit = 19, RULE_accionLoop = 20, RULE_repeat_stmt = 21, RULE_decl_head = 22, 
		RULE_set_stmt_no_sc = 23, RULE_data_type = 24, RULE_type_base = 25, RULE_array_specifier = 26, 
		RULE_inicializador = 27, RULE_expression = 28, RULE_comparador = 29, RULE_factor = 30, 
		RULE_literal = 31, RULE_array_literal = 32, RULE_accesoArreglo = 33, RULE_accesoMiembro = 34, 
		RULE_llamadaFuncion = 35, RULE_listaArgumentos = 36, RULE_name = 37;
	public static readonly string[] ruleNames = {
		"program", "otraclase", "clase_decl", "classBody", "classMember", "func_decl", 
		"entry_func_decl", "param_list", "param", "block", "sentencia", "declare_stmt", 
		"set_stmt", "setObjetivo", "return_stmt", "stmt_control", "check_stmt", 
		"otherwiseOpcional", "loop_stmt", "loopInit", "accionLoop", "repeat_stmt", 
		"decl_head", "set_stmt_no_sc", "data_type", "type_base", "array_specifier", 
		"inicializador", "expression", "comparador", "factor", "literal", "array_literal", 
		"accesoArreglo", "accesoMiembro", "llamadaFuncion", "listaArgumentos", 
		"name"
	};

	private static readonly string[] _LiteralNames = {
		null, "'func'", "'entry'", "'declare'", "'set'", "'object'", "'use'", 
		"'check'", "'otherwise'", "'loop'", "'repeat'", "'gives'", "'and'", "'or'", 
		"'not'", "'null'", "'i'", "'f'", "'b'", "'s'", "'ask'", "'show'", "'len'", 
		null, null, null, null, null, null, null, "','", "'.'", "':'", "';'", 
		"'='", "'?'", "'_'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", 
		"'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "FUNC", "ENTRY", "DECLARE", "SET", "OBJECT", "USE", "CHECK", "OTHERWISE", 
		"LOOP", "REPEAT", "GIVES", "AND", "OR", "NOT", "NULL", "TYPE_I", "TYPE_F", 
		"TYPE_B", "TYPE_S", "ASK", "SHOW", "LEN", "CONVERT_OP", "FILE_OP", "BOOL", 
		"FLOAT", "INT", "STRING", "ID", "COMMA", "DOT", "COLON", "SEMI_COLON", 
		"EQUAL", "QUESTION", "UNDERSCORE", "O_PAREN", "C_PAREN", "O_BRACKETS", 
		"C_BRACKETS", "O_BRACES", "C_BRACES", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
		"MODULO", "LTHAN", "GTHAN", "LTE", "GTE", "EQ", "NEQ", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "construccion_semana2Parser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static construccion_semana2Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public construccion_semana2Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public construccion_semana2Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(construccion_semana2Parser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public OtraclaseContext[] otraclase() {
			return GetRuleContexts<OtraclaseContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OtraclaseContext otraclase(int i) {
			return GetRuleContext<OtraclaseContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Clase_declContext[] clase_decl() {
			return GetRuleContexts<Clase_declContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Clase_declContext clase_decl(int i) {
			return GetRuleContext<Clase_declContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==OBJECT || _la==USE) {
				{
				State = 78;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case USE:
					{
					State = 76;
					otraclase();
					}
					break;
				case OBJECT:
					{
					State = 77;
					clase_decl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OtraclaseContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USE() { return GetToken(construccion_semana2Parser.USE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI_COLON() { return GetToken(construccion_semana2Parser.SEMI_COLON, 0); }
		public OtraclaseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_otraclase; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterOtraclase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitOtraclase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOtraclase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OtraclaseContext otraclase() {
		OtraclaseContext _localctx = new OtraclaseContext(Context, State);
		EnterRule(_localctx, 2, RULE_otraclase);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85;
			Match(USE);
			State = 86;
			name();
			State = 87;
			Match(SEMI_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Clase_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OBJECT() { return GetToken(construccion_semana2Parser.OBJECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode O_BRACES() { return GetToken(construccion_semana2Parser.O_BRACES, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode C_BRACES() { return GetToken(construccion_semana2Parser.C_BRACES, 0); }
		public Clase_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_clase_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterClase_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitClase_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClase_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Clase_declContext clase_decl() {
		Clase_declContext _localctx = new Clase_declContext(Context, State);
		EnterRule(_localctx, 4, RULE_clase_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89;
			Match(OBJECT);
			State = 90;
			name();
			State = 91;
			Match(O_BRACES);
			State = 92;
			classBody();
			State = 93;
			Match(C_BRACES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ClassMemberContext[] classMember() {
			return GetRuleContexts<ClassMemberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassMemberContext classMember(int i) {
			return GetRuleContext<ClassMemberContext>(i);
		}
		public ClassBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterClassBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitClassBody(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassBodyContext classBody() {
		ClassBodyContext _localctx = new ClassBodyContext(Context, State);
		EnterRule(_localctx, 6, RULE_classBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) {
				{
				{
				State = 95;
				classMember();
				}
				}
				State = 100;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassMemberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Declare_stmtContext declare_stmt() {
			return GetRuleContext<Declare_stmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Func_declContext func_decl() {
			return GetRuleContext<Func_declContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Entry_func_declContext entry_func_decl() {
			return GetRuleContext<Entry_func_declContext>(0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classMember; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterClassMember(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitClassMember(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassMember(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassMemberContext classMember() {
		ClassMemberContext _localctx = new ClassMemberContext(Context, State);
		EnterRule(_localctx, 8, RULE_classMember);
		try {
			State = 104;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case DECLARE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 101;
				declare_stmt();
				}
				break;
			case FUNC:
				EnterOuterAlt(_localctx, 2);
				{
				State = 102;
				func_decl();
				}
				break;
			case ENTRY:
				EnterOuterAlt(_localctx, 3);
				{
				State = 103;
				entry_func_decl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Func_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNC() { return GetToken(construccion_semana2Parser.FUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode O_PAREN() { return GetToken(construccion_semana2Parser.O_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode C_PAREN() { return GetToken(construccion_semana2Parser.C_PAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(construccion_semana2Parser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Data_typeContext data_type() {
			return GetRuleContext<Data_typeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Param_listContext param_list() {
			return GetRuleContext<Param_listContext>(0);
		}
		public Func_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_func_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterFunc_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitFunc_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunc_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Func_declContext func_decl() {
		Func_declContext _localctx = new Func_declContext(Context, State);
		EnterRule(_localctx, 10, RULE_func_decl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(FUNC);
			State = 107;
			name();
			State = 108;
			Match(O_PAREN);
			State = 110;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 109;
				param_list();
				}
			}

			State = 112;
			Match(C_PAREN);
			State = 113;
			Match(COLON);
			State = 114;
			data_type();
			State = 115;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Entry_func_declContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENTRY() { return GetToken(construccion_semana2Parser.ENTRY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Func_declContext func_decl() {
			return GetRuleContext<Func_declContext>(0);
		}
		public Entry_func_declContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entry_func_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterEntry_func_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitEntry_func_decl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntry_func_decl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Entry_func_declContext entry_func_decl() {
		Entry_func_declContext _localctx = new Entry_func_declContext(Context, State);
		EnterRule(_localctx, 12, RULE_entry_func_decl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 117;
			Match(ENTRY);
			State = 118;
			func_decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Param_listContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext[] param() {
			return GetRuleContexts<ParamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext param(int i) {
			return GetRuleContext<ParamContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(construccion_semana2Parser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(construccion_semana2Parser.COMMA, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_param_list; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.EnterParam_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			Iconstruccion_semana2ParserListener typedListener = listener as Iconstruccion_semana2ParserListener;
			if (typedListener != null) typedListener.ExitParam_list(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Iconstruccion_semana2ParserVisitor<TResult> typedVisitor = visitor as Iconstruccion_semana2ParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParam_list(this);
			else return visitor.VisitChildren(this);
		}
	}
